--- a/src/NetSAT.csproj
+++ b/src/NetSAT.csproj
@@ -43,7 +43,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AcisCurve.cs" />
+    <Compile Include="AcisExppcCurve.cs" />
     <Compile Include="AcisExactCurve.cs" />
+    <Compile Include="AcisPCurve.cs" />
     <Compile Include="AcisIntCurve.cs" />
     <Compile Include="AcisEllipseCurve.cs" />
     <Compile Include="AcisEntityFactory.cs" />
